# nivel-20-sheet-generator

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-backend.yaml  build-frontend.yaml  build.yaml  deploy.yaml
api/src/: app.py  config.py  logger.py
backend/: Dockerfile  pyproject.toml
backend/src/: app.py
backend/src/controllers/: character.py
backend/src/models/: character.py
backend/src/templates/: index.html.tpl
frontend/: Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
frontend/src/: FAQ.md  colors.ts  config.ts
frontend/src/components/: Footer.astro  Form.tsx  Header.astro  Info.astro  Logo.astro
frontend/src/layouts/: Layout.astro  Section.astro
frontend/src/pages/: index.astro
frontend/src/pages/api/: generator.ts
frontend/src/styles/: Form.css
src/api/: app.py  config.py  test.html
src/api/templates/: index.html.tpl
src/generator-api/: html_gen.py  logger.py  test.py
src/generator-api/controllers/: character.py  exceptions.py  sample.json
src/generator-api/models/: character.py
src/generator-api/templates/: index.html.tpl
src/templates/: index.html.tpl  style.css
templates/: index.html.tpl
tests/: html_gen.py
