[tool.poetry]
name = "generator-api"
version = "0.1.0"
description = ""
authors = ["4l3j0Ok <alejofsarmiento@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jinja2 = "^3.1.6"
fastapi = {extras = ["standard"], version = "^0.115.11"}
requests = "^2.32.3"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
